--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
   <body>
+    <style>
+      h1 {
+        font-size: 70px;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        font-family: sans-serif;
+        justify-content: center;
+        margin: 0;
+      }
+    </style>
     <h1>Elon je pes</h1>
   </body>
 </html>
